# forsinka

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  mise.toml
.github/workflows/: lint.yml  release_image.yml  run_tests.yml
src/: api.rs  by_stop_name.sql  cli.rs  db.rs  entur.rs  entur_data.rs  entur_siriformat.rs  handlers.rs  main.rs  membased.rs  routes.rs  schema.sql  server.rs
src/server/: infra.rs  state.rs
static/: style.css
templates/: trains.html
