[package]
name = "forsinka"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Finne forsinkede kollektivreiser i SIRI-et"

authors = [
    "Robin Kåveland <robin@kaveland.no>"
]
repository = "https://github.com/kaaveland/forsinka.git"
homepage = "https://github.com/kaaveland/forsinka"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
duckdb = { version = "1.4.1", features = ["bundled", "parquet", "chrono", "appender-arrow", "loadable-extension"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
