[package]
name = "forsinka"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Finne forsinkede kollektivreiser i SIRI-et"

authors = [
    "Robin Kåveland <robin@kaveland.no>"
]
repository = "https://github.com/kaaveland/forsinka.git"
homepage = "https://github.com/kaaveland/forsinka"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
# Would like to use loadable-extensions here, but it's not ready yet: https://github.com/duckdb/duckdb-rs/issues/536
duckdb = { version = "1.4.1", features = ["bundled", "parquet", "chrono", "json"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "http2", "blocking", "charset", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
